--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "axios": "^0.21.1",
     "better-scroll": "^1.15.1",
     "core-js": "^3.6.5",
-    "jasonp": "^1.0.0",
+    "jsonp": "^0.2.1",
     "node-sass": "^5.0.0",
     "sass-loader": "^10.1.1",
     "vue": "^2.6.11",
+    "vue-lazyload": "^1.0.3",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0",
-    "vue-lazyload": "^1.0.3"
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
