--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.1",
     "better-scroll": "^1.15.1",
     "core-js": "^3.6.5",
+    "create-keyframe-animation": "^0.1.0",
     "js-base64": "^3.6.0",
     "jsonp": "^0.2.1",
     "node-sass": "^5.0.0",
